--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
+      env:
+        GIT_USER: gonzalezemmanuel
       with:
         node-version: ${{ matrix.node-version }}
-        GIT_USER: gonzalezemmanuel
     - run: npm install
     - run: npm run build --if-present
     - run: npm run deploy
