--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
-      env:
-        GIT_USER: gonzalezemmanuel
+
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
-    - run: npm run deploy
+    - name: deploy 
+      run: npm run deploy
+      env:
+        GIT_USER: gonzalezemmanuel
