--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build --if-present
-    - name: deploy 
-      run: npm run deploy
-      env:
-        GIT_USER: gonzalezemmanuel
+    # - name: deploy 
+    #   run: npm run deploy
+    #   env:
+    #     GIT_USER: gonzalezemmanuel
