--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - name: setup node
       uses: actions/setup-node@v1
       with:
-        node-version: '12.16'
+        node-version: '10.16'
 
     - name: install
       working-directory: ./
@@ -22,11 +22,11 @@ jobs:
 
     - name: build
       working-directory: ./
-      run: npm run build --if-present
+      run: npm run build
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      env:
-        ACTIONS_DEPLOY_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./build
+      - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        ACCESS_TOKEN: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: build # The folder the action should deploy.
